--- a/learn.ipynb
+++ b/learn.ipynb
@@ -9,19 +9,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "hello world\n",
       "hello world\n"
      ]
     }
    ],
    "source": [
     "print(\"hello world\")\n",
-    "print(\"hello world\")"
+    "print(\"hello world\")\n",
+    "print(123)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py39",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -35,7 +37,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
